# LinuxDevelopment2023

./: .gitignore  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  outlib.h  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb1.scenario  gdb1.test  gdb2.scenario  gdb2.test  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove_unprotected.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: configure.ac
08_I18n/po/: guess.pot  ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  lab0.c  patch1.patch  patch2.patch  patch3.patch
10_Testing/: CMakeLists.txt
10_Testing/include/: buf.h
10_Testing/src/: CMakeLists.txt
10_Testing/test/: CMakeLists.txt  grow_test.c  init_test.c  null_test.c  pop_test.c  push_test.c  test_utils.h
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: guess.pot  ru.po
11_Documenting/src/: guess.c
